--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   table_calendar: ^3.2.0
   shared_preferences: ^2.5.2
+  firebase_auth: ^5.0.0
 
 dev_dependencies:
   flutter_test:
